# archiva

./: .bazelignore  .bazelrc  .gitignore  BAZEL.md  BUILD.bazel  MODULE.bazel  README.md  jetty-debug.sh  jetty.sh
.github/: dependabot.yml
.github/workflows/: bazel.yml  build.yml  maven.yml  release-drafter.yml
archiva-cli/: BUILD.bazel
archiva-docs/: BUILD.bazel  README.adoc
archiva-docs/src/site/markdown/: privacy-policy.md  quick-start.md  release-notes.md
archiva-docs/src/site/markdown/adminguide/: appearance-configuration.md  archiva-logs.md  audit-logs.md  configuration-files.md  configuration.md  consumers.md  customising-security.md  databases.md  file-locking-configuration.md  index.md  installing.md  legacy.md  logging.md  network-configuration.md  network-proxies.md  proxy-connector-rules.md  proxy-connectors.md  redback-runtime-configuration.md  reports.md  repositories-content-storage.md  repositories.md  roles.md  security-logs.md  security.md  staging-repositories.md  standalone.md  system-status.md  ui-configuration.md  upgrade.md  url-cache-failure-configuration.md  users.md  webapp.md
archiva-docs/src/site/markdown/adminguide/webservices/: rest.md
archiva-docs/src/site/markdown/customising/: writing-consumer.md
archiva-docs/src/site/markdown/userguide/: auditlog-report.md  browsing.md  delete-artifact.md  deploy.md  index.md  querying-artifacts.md  rss.md  searching.md  using-repository.md  virtual-repositories.md
archiva-jetty/: BUILD.bazel
archiva-modules/: README.adoc
archiva-modules/archiva-base/archiva-checksum/: BUILD.bazel
archiva-modules/archiva-base/archiva-common/: BUILD.bazel
archiva-modules/archiva-base/archiva-configuration/: BUILD.bazel
archiva-modules/archiva-base/archiva-configuration/archiva-configuration-model/: BUILD.bazel
archiva-modules/archiva-base/archiva-configuration/archiva-configuration-provider/: BUILD.bazel
archiva-modules/archiva-base/archiva-consumers/archiva-consumer-api/: BUILD.bazel
archiva-modules/archiva-base/archiva-consumers/archiva-core-consumers/: BUILD.bazel
archiva-modules/archiva-base/archiva-consumers/archiva-indexer-consumers/: BUILD.bazel
archiva-modules/archiva-base/archiva-consumers/archiva-metadata-consumer/: BUILD.bazel
archiva-modules/archiva-base/archiva-consumers/archiva-signature-consumers/: BUILD.bazel
archiva-modules/archiva-base/archiva-event-api/: BUILD.bazel
archiva-modules/archiva-base/archiva-event-central/: BUILD.bazel
archiva-modules/archiva-base/archiva-filelock/: BUILD.bazel
archiva-modules/archiva-base/archiva-mock/: BUILD.bazel
archiva-modules/archiva-base/archiva-model/: BUILD.bazel
archiva-modules/archiva-base/archiva-policies/: BUILD.bazel
archiva-modules/archiva-base/archiva-proxy/: BUILD.bazel
archiva-modules/archiva-base/archiva-proxy-api/: BUILD.bazel
archiva-modules/archiva-base/archiva-repository-admin/archiva-repository-admin-api/: BUILD.bazel
archiva-modules/archiva-base/archiva-repository-admin/archiva-repository-admin-default/: BUILD.bazel
archiva-modules/archiva-base/archiva-repository-api/: BUILD.bazel
archiva-modules/archiva-base/archiva-repository-layer/: BUILD.bazel
archiva-modules/archiva-base/archiva-repository-layer/src/test/resources/: spring-context-group.xml  spring-context-managed.xml  spring-context-remote.xml  spring-context.xml
archiva-modules/archiva-base/archiva-repository-scanner/: BUILD.bazel
archiva-modules/archiva-base/archiva-security-common/: BUILD.bazel
archiva-modules/archiva-base/archiva-storage-api/: BUILD.bazel
archiva-modules/archiva-base/archiva-storage-fs/: BUILD.bazel
archiva-modules/archiva-base/archiva-test-utils/: BUILD.bazel
archiva-modules/archiva-base/archiva-transaction/: BUILD.bazel
archiva-modules/archiva-base/archiva-xml-tools/: BUILD.bazel
archiva-modules/archiva-maven/archiva-maven-common/: BUILD.bazel
archiva-modules/archiva-maven/archiva-maven-indexer/: BUILD.bazel
archiva-modules/archiva-maven/archiva-maven-metadata/: BUILD.bazel
archiva-modules/archiva-maven/archiva-maven-model/: BUILD.bazel
archiva-modules/archiva-maven/archiva-maven-proxy/: BUILD.bazel
archiva-modules/archiva-maven/archiva-maven-repository/: BUILD.bazel
archiva-modules/archiva-maven/archiva-maven-scheduler/: BUILD.bazel
archiva-modules/archiva-scheduler/archiva-scheduler-api/: BUILD.bazel
archiva-modules/archiva-scheduler/archiva-scheduler-indexing/: BUILD.bazel
archiva-modules/archiva-scheduler/archiva-scheduler-repository/: BUILD.bazel
archiva-modules/archiva-scheduler/archiva-scheduler-repository-api/: BUILD.bazel
archiva-modules/archiva-web/archiva-rest/archiva-rest-api/: BUILD.bazel
archiva-modules/archiva-web/archiva-rest/archiva-rest-services/: BUILD.bazel
archiva-modules/archiva-web/archiva-rss/: BUILD.bazel
archiva-modules/archiva-web/archiva-security/: BUILD.bazel
archiva-modules/archiva-web/archiva-web-common/: BUILD.bazel
archiva-modules/archiva-web/archiva-webapp/: BUILD.bazel  serve-archiva-web.sh
archiva-modules/archiva-web/archiva-webapp-test/: BUILD.bazel  ReadMe.txt
archiva-modules/archiva-web/archiva-webdav/: BUILD.bazel
archiva-modules/metadata/metadata-model/: BUILD.bazel
archiva-modules/metadata/metadata-repository-api/: BUILD.bazel
archiva-modules/metadata/metadata-statistics-api/: BUILD.bazel
archiva-modules/metadata/metadata-store-provider/metadata-store-cassandra/: BUILD.bazel
archiva-modules/metadata/metadata-store-provider/metadata-store-file/: BUILD.bazel
archiva-modules/metadata/metadata-store-provider/oak-jcr/metadata-store-jcr/: BUILD.bazel
archiva-modules/metadata/test-repository/: BUILD.bazel  files.bzl
archiva-modules/plugins/audit/: BUILD.bazel
archiva-modules/plugins/generic-metadata-support/: BUILD.bazel
archiva-modules/plugins/problem-reports/: BUILD.bazel
archiva-modules/plugins/stage-repository-merge/: BUILD.bazel
tools/bazel/: BUILD.bazel  apt_to_md.py  archiva.bzl  markdown_site.bzl  md_to_html.py  staged_files.bzl  war.bzl
(+63 files in other folders)
