"""Archiva — Bazel proof-of-concept.

Only `archiva-common` and `archiva-checksum` are wired up so far.
The rest of the project continues to build with Maven.
"""

module(
    name = "archiva",
    version = "3.0.0-SNAPSHOT",
)

bazel_dep(name = "rules_java", version = "8.6.1")
bazel_dep(name = "rules_jvm_external", version = "6.5")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        # Versions mirror archiva's root pom.xml properties block.
        "org.apache.commons:commons-lang3:3.12.0",
        "commons-io:commons-io:2.11.0",
        "commons-codec:commons-codec:1.15",
        "org.slf4j:slf4j-api:1.7.36",
        "org.apache.logging.log4j:log4j-slf4j-impl:2.17.1",
        "org.apache.logging.log4j:log4j-api:2.17.1",
        "org.apache.logging.log4j:log4j-core:2.17.1",
        "jakarta.annotation:jakarta.annotation-api:1.3.5",
        "jakarta.xml.bind:jakarta.xml.bind-api:2.3.3",

        # Test scope
        "junit:junit:4.13.2",
        "org.hamcrest:hamcrest-core:1.3",

        # archiva-test-utils
        "org.springframework:spring-test:5.3.22",
        "org.springframework:spring-core:5.3.22",
        "org.xmlunit:xmlunit-core:2.8.4",
        "org.junit.platform:junit-platform-console-standalone:1.5.2",

        # archiva-storage-api
        "org.junit.jupiter:junit-jupiter-api:5.5.2",
        "org.junit.jupiter:junit-jupiter-engine:5.5.2",
        "org.mockito:mockito-core:3.4.0",
        "org.mockito:mockito-junit-jupiter:3.4.0",

        # archiva-filelock
        "org.springframework:spring-context:5.3.22",
        "org.springframework:spring-beans:5.3.22",
        "javax.inject:javax.inject:1",
        "org.apache.logging.log4j:log4j-jcl:2.17.1",
        "com.googlecode.multithreadedtc:multithreadedtc:1.01",

        # archiva-model uses commons-collections4 transitively
        "org.apache.commons:commons-collections4:4.4",

        # archiva-policies + vendored archiva-components/spring-cache-ehcache
        "jakarta.inject:jakarta.inject-api:1.0",
        "jakarta.annotation:jakarta.annotation-api:1.3.5",
        "org.ehcache:ehcache:3.9.9",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    fetch_sources = False,
    fail_on_missing_checksum = True,
)
use_repo(maven, "maven")
