load("//tools/bazel:archiva.bzl", "archiva_module")

archiva_module(
    name = "archiva-model",
    deps = [
        "//archiva-modules/archiva-base/archiva-common",
        "@maven//:org_apache_commons_commons_lang3",
    ],
    test_deps = [
        "//archiva-modules/archiva-base/archiva-test-utils",
        "@maven//:junit_junit",
    ],
)
