load("//tools/bazel:archiva.bzl", "archiva_module")

archiva_module(
    name = "archiva-proxy",
    deps = [
        "//archiva-modules/archiva-base/archiva-checksum",
        "//archiva-modules/archiva-base/archiva-common",
        "//archiva-modules/archiva-base/archiva-configuration/archiva-configuration-model",
        "//archiva-modules/archiva-base/archiva-configuration/archiva-configuration-provider",
        "//archiva-modules/archiva-base/archiva-event-api",
        "//archiva-modules/archiva-base/archiva-filelock",
        "//archiva-modules/archiva-base/archiva-policies",
        "//archiva-modules/archiva-base/archiva-proxy-api",
        "//archiva-modules/archiva-base/archiva-repository-api",
        "//archiva-modules/archiva-base/archiva-repository-layer",
        "//archiva-modules/archiva-base/archiva-storage-api",
        "//archiva-modules/archiva-base/archiva-storage-fs",
        "//archiva-modules/archiva-scheduler/archiva-scheduler-api",
        "//archiva-modules/archiva-scheduler/archiva-scheduler-repository-api",
        "//third_party/archiva-components/spring-taskqueue",
        "@maven//:jakarta_annotation_jakarta_annotation_api",
        "@maven//:javax_inject_javax_inject",
        "@maven//:org_apache_commons_commons_collections4",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_spring_context",
    ],
)
